--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.5.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'oliveira.edison'
@@ -33,10 +34,10 @@ configurations {
 dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.5.10'
     implementation 'org.springframework.boot:spring-boot-starter:2.5.5'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.5.4'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.5.5'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
@@ -45,6 +46,19 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
 
 task integrationTest(type: Test) {
@@ -53,5 +67,10 @@ task integrationTest(type: Test) {
     useJUnitPlatform()
 }
 
-check.dependsOn integrationTest
-integrationTest.mustRunAfter test
+check {
+    dependsOn integrationTest
+}
+
+integrationTest {
+    mustRunAfter test
+}
